Fix hamburger nav-toggle z-index by adding position relative

--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,7 @@ header {
     border: none;
     cursor: pointer;
     padding: 10px;
+    position: relative;
     z-index: 100001;
 }
 
